# hypomnema

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
backend/src/hypomnema/: cli.py  config.py  crypto.py  desktop.py  main.py  tidy.py  token_utils.py
backend/src/hypomnema/api/: auth.py  backup.py  deps.py  documents.py  engrams.py  health.py  schemas.py  search.py  settings.py  viz.py
backend/src/hypomnema/db/: engine.py  models.py  schema.py  sync_adapter.py
backend/src/hypomnema/embeddings/: __init__.py  factory.py  google.py  mock.py  openai.py
backend/src/hypomnema/evals/: __init__.py  engram_dedupe.py  tidy_pdf_baseline.py  tidy_text.py  tidy_text_corpus.py  tidy_text_matrix.py
backend/src/hypomnema/ingestion/: __init__.py  feeds.py  file_parser.py  scribble.py  url_fetch.py
backend/src/hypomnema/llm/: __init__.py  base.py  claude.py  factory.py  google.py  json_utils.py  ollama.py  openai.py
backend/src/hypomnema/maintenance/: engram_dedupe.py
backend/src/hypomnema/ontology/: __init__.py  engram.py  extractor.py  linker.py  normalizer.py  pipeline.py  queue.py
backend/src/hypomnema/scheduler/: cron.py
backend/src/hypomnema/search/: __init__.py  doc_search.py  knowledge_search.py
backend/src/hypomnema/triage/: bouncer.py
backend/src/hypomnema/visualization/: projection.py
backend/tests/: conftest.py  test_cli.py  test_config.py  test_token_utils.py
backend/tests/test_api/: conftest.py  test_documents.py  test_settings.py  test_settings_catalog.py  test_viz.py
backend/tests/test_db/: test_engine.py  test_schema.py
backend/tests/test_embeddings/: test_google_embed.py  test_openai_embed.py
backend/tests/test_evals/: test_engram_dedupe.py  test_tidy_pdf_baseline.py  test_tidy_text.py  test_tidy_text_matrix.py
backend/tests/test_ingestion/: conftest.py  test_feeds.py  test_file_parser.py  test_scribble.py  test_url_fetch.py
backend/tests/test_integration/: conftest.py  test_full_pipeline.py
backend/tests/test_llm/: test_clients.py  test_ollama.py  test_openai.py
backend/tests/test_maintenance/: test_engram_merge_maintenance.py
backend/tests/test_ontology/: conftest.py  test_engram.py  test_extractor.py  test_linker.py  test_normalizer.py  test_pipeline.py
backend/tests/test_scheduler/: test_cron.py
backend/tests/test_search/: test_doc_search.py  test_knowledge_search.py
backend/tests/test_triage/: test_bouncer.py
backend/tests/test_visualization/: test_projection.py
desktop/: BUILD.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: next.config.ts  (+3 more)
(+256 files in other folders)
